[No-Ref] Memory and thread optimizations